<resources>
    <string name="app_name">GitHub User</string>
    <string name="profile_image">Profile Image</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="change_theme">Change Theme</string>
    <string name="share">Share User</string>
    <string name="search">Search</string>
    <string name="toolbar_heading">Find GitHub User\nusing github api</string>
    <string name="search_text">Search for a user…</string>
    <string name="settings">Settings</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="recent_search">Recent search</string>
    <string name="no_users_found">No Users Found</string>
    <string name="no_followers_found">No Followers Found</string>
    <string name="not_follow_anyone">This user doesn\'t follow anyone</string>
    <string name="no_data">No data found</string>
    <string name="user_not_found">Users not found.</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="user_details_not_found">User Details Not Found</string>
    <string name="user_follower_not_found">User\'s Followers Not Found</string>
    <string name="user_following_not_found">User\'s Following Not Found</string>
    <string name="timeout">Timeout</string>
    <string name="access_limited">Access Limited</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="light_mode">Light Mode</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="create_profile">Create Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorite_user_list_is_empty">Favorite User List is empty</string>
    <string name="add_favorite">Successfully added to Favorite List</string>
    <string name="delete_favorite">Deleted from Favorite List</string>
    <string name="delete_all_favorite">Favorite List deleted!</string>
    <string name="delete_all">Delete All</string>
    <string name="save">Save</string>
    <string name="delete_dialog">Delete all items?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile_error">Could not save Bitmap</string>
    <string name="data_saved">Data Saved</string>
    <string name="text_input_error">Please fill out this field</string>
    <string name="validation">All field must not be empty</string>
</resources>