<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:scrimAnimationDuration="0">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/collapsing_toolbar_background"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimaryVariant"
            app:expandedTitleTextAppearance="@style/ExpandText"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/medium_margin"
                android:paddingEnd="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin">

                <TextView
                    style="@style/HeadText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textAlignment="center"
                    android:text="@string/toolbar_heading" />

                <EditText
                    android:id="@+id/customSearch"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:background="@drawable/search_bar_background"
                    android:drawableEnd="@drawable/search_btn"
                    android:focusable="false"
                    android:hint="@string/search_text"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/whiteSoft" />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/placeholder_users_layout" />

                    <include layout="@layout/placeholder_users_layout" />

                    <include layout="@layout/placeholder_users_layout" />

                    <include layout="@layout/placeholder_users_layout" />

                    <include layout="@layout/placeholder_users_layout" />

                    <include layout="@layout/placeholder_users_layout" />

                    <include layout="@layout/placeholder_users_layout" />

                    <include layout="@layout/placeholder_users_layout" />

                    <include layout="@layout/placeholder_users_layout" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/user_row"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/noUsersLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.2"
                    app:srcCompat="@drawable/no_users" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_users_found"
                    android:textSize="50sp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
